crates/viewer/re_view_spatial/tests/snapshots/topology_errors__2d_view_at_pinhole.snap
---
source: crates/viewer/re_view_spatial/tests/topology_errors.rs
expression: visualizer_errors
---
PerVisualizer(
    {
        "Boxes3D": PerEntity(
            {
                /misplaced_boxes3d_entity: "Can't visualize 3D content that is under a pinhole projection.",
            },
        ),
        "Ellipsoids3D": PerEntity(
            {
                /disconnected_entity: "No transform path from \"disconnected\" to the view's origin frame (\"pinhole\").",
            },
        ),
    },
)
