crates/viewer/re_view_spatial/tests/snapshots/topology_errors__3d_view_at_pinhole.snap
---
source: crates/viewer/re_view_spatial/tests/topology_errors.rs
expression: visualizer_errors
---
PerVisualizer(
    {
        "Points3D": PerEntity(
            {
                /points3d_entity: "The origin of the 3D view is under pinhole projection which is not supported by most 3D visualizations.",
            },
        ),
        "Ellipsoids3D": PerEntity(
            {
                /disconnected_entity: "No transform path to the view's origin frame.",
            },
        ),
        "Boxes3D": PerEntity(
            {
                /misplaced_boxes3d_entity: "The origin of the 3D view is under pinhole projection which is not supported by most 3D visualizations.",
            },
        ),
        "Points2D": PerEntity(
            {
                /points2d_entity: "The origin of the 3D view is under pinhole projection which is not supported by most 3D visualizations.",
            },
        ),
    },
)
