crates/viewer/re_view_spatial/tests/snapshots/topology_errors__3d_view_at_root.snap
---
source: crates/viewer/re_view_spatial/tests/topology_errors.rs
expression: visualizer_errors
---
PerVisualizer(
    {
        "Image": PerEntity(
            {
                /misplaced_image_entity: "2D visualizers require a pinhole ancestor to be shown in a 3D view.",
            },
        ),
        "Ellipsoids3D": PerEntity(
            {
                /disconnected_entity: "No transform path from \"disconnected\" to the view's origin frame (\"world\").",
            },
        ),
        "Boxes3D": PerEntity(
            {
                /misplaced_boxes3d_entity: "Can't visualize 3D content that is under a pinhole projection.",
            },
        ),
        "DepthImage": PerEntity(
            {
                /misplaced_depth_image_entity: "Cannot draw depth image as 3D point cloud since it is not under a pinhole camera.",
            },
        ),
    },
)
